# port_intent_detector_pro

./: README.md  cli.py  cli_reports.py  pyproject.toml  requirements.txt  setup.py
backend/: database.py  init.py  intent_map.py  monitor.py  utils.py
desktop/: init.py  main.py  notifications.py  plot_widget.py  ui_main.py
reports/: init.py  reporter.py
webapp/: app.py  init.py  websocket_server.py
webapp/static/css/: style.css
webapp/static/js/: live.js
webapp/templates/: index.html
