[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "port_intent_detector_pro"
version = "1.0.0"
description = "Professional Port Intent Detector with CLI, Desktop, and Web dashboard"
authors = [
    { name = "Mkali10", email = "your-email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "psutil>=5.9",
    "Flask>=2.3",
    "flask-socketio>=6.3",
    "PyQt6>=6.6",
    "plotly>=5.15",
    "reportlab>=3.8"
]

[project.urls]
Homepage = "https://github.com/Mkali10/port_intent_detector_pro"

[project.scripts]
port-intent-pro = "cli:main"
port-intent-web-pro = "webapp.app:run_web"
port-intent-desktop-pro = "desktop.main:run_desktop"
